--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ img {
 }
 .link {
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover,
 .link:focus {
@@ -264,6 +265,26 @@ img {
     margin-right: 30px;
 }
 
+.work_text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    background-color: rgba(47, 48, 58, 0.8); ;
+    color: var(--secondary-color);
+    position: absolute;
+    width: 370px;
+    min-height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-70px);
+}
+
+
+
 .team {
     background-color: var(--background-color);
     font-size: 16px;
@@ -318,6 +339,7 @@ img {
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc_link:hover, .soc_link:focus {
@@ -360,6 +382,8 @@ img {
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client_link:hover,
 .client_link:focus {
@@ -438,6 +462,8 @@ img {
     justify-content: center;
     align-items: center;
     fill: var(--secondary-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer_soc_link:hover,
@@ -472,7 +498,10 @@ img {
     color: var(--title-color);
     background-color: var(--background-color);
     border: none;
-    border-radius: 4px;   
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter_btn:hover,
@@ -497,12 +526,17 @@ img {
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
-    /* padding: 0; */
 }
 .galerie_item {
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc((100% - 90px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.galerie_item:hover,
+.galerie_item:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .galerie_title {
     margin-bottom: 4px;
@@ -522,14 +556,8 @@ img {
 
 .text_card {
     padding: 20px 24px;
-    /* padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 24px; */
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
 }
 
-.galerie_item:hover, .galerie_item:focus {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) ;
-}
