--- a/css/style.css
+++ b/css/style.css
@@ -628,9 +628,9 @@ img {
    
 }
 
-.backdrop.is-hidden .modal {
-    transform: scale(1) rotate(90deg);
-    transition: transform 1000ms cubic-bezier(0.39, 0.575, 0.565, 1);
+.backdrop.is_hidden .modal {
+    transform: scale(1) translateY(0) ;
+    transition: transform 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
 }  
 
 .modal {
@@ -644,7 +644,7 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    transition: transform 1000ms cubic-bezier(0.39, 0.575, 0.565, 1);
+    transition: transform 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
     transform: translate(-50%, -50%) rotate(0);
     
 }
@@ -670,7 +670,7 @@ img {
     text-align: center;
     padding: 0;
 }
-.is-hidden {
+.is_hidden {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
